Add raycaster.js script tag to enable 3D combat

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
     <script src="src/game-objects/party.js"></script>
     <script src="src/game-objects/locations.js"></script>
 
-    <script src="src/systems/worldMap.js"></script>
+    <script src="src/systems/worldMap.js"></script>`r`n    \u003cscript src="src/systems/raycaster.js"\u003e\u003c/script\u003e
     <script src="src/systems/combat.js"></script>
 
     <script src="src/managers/diplomacyManager.js"></script>
